fix location issue

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -3,8 +3,7 @@ Define IS_DJANGOSTACK_LOADED
 WSGIDaemonProcess wsgi-djangostack processes=2 threads=15 display-name=%{GROUP}
 </IfDefine> 
  
-Alias /static "/Applications/djangostack/apps/django/lib/python2.7/site-packages/django/contrib/admin/static"
-Alias /s "/Applications/djangostack/apps/django/django_projects/PlaylistProject/PlaylistProject/s"
+Alias /static "/Applications/djangostack/apps/django/django_projects/PlaylistProject/PlaylistProject/static"
 WSGIScriptAlias /PlaylistProject '/Applications/djangostack/apps/django/django_projects/PlaylistProject/PlaylistProject/wsgi.py'
 <Directory "/Applications/djangostack/apps/django/django_projects/PlaylistProject/PlaylistProject/">
     WSGIProcessGroup wsgi-djangostack
